--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,8 @@
 {
+  "parser": "babel-eslint",
+  "rules": {
+    "max-len": [1, 100, 2, {ignoreComments: true}]
+  },
   "extends": "airbnb-base",
   "globals": {
     "document": true
